tests/tests/checks/snapshots/analysis/cpp/macro.cpp/check_glob@MULTI_LINE_MACRO.snap
---
source: tests/test_check_insta.rs
expression: "&json_results"
---
[
  {
    "loc": "00012:8-24",
    "source": 1,
    "syntax": "def,macro",
    "pretty": "macro MULTI_LINE_MACRO",
    "sym": "M_dca801c9a44abeec"
  },
  {
    "loc": "00012:8-24",
    "target": 1,
    "kind": "def",
    "pretty": "MULTI_LINE_MACRO",
    "sym": "M_dca801c9a44abeec"
  },
  {
    "loc": "00029:0-16",
    "source": 1,
    "expansions": "static bool\nBool0()\n{\n  return true;\n}",
    "syntax": "use,macro",
    "pretty": "macro MULTI_LINE_MACRO",
    "sym": "M_dca801c9a44abeec"
  },
  {
    "loc": "00029:0-16",
    "target": 1,
    "kind": "use",
    "pretty": "MULTI_LINE_MACRO",
    "sym": "M_dca801c9a44abeec"
  },
  {
    "loc": "00030:0-16",
    "source": 1,
    "expansions": "static bool\nBool1()\n{\n  return true;\n}",
    "syntax": "use,macro",
    "pretty": "macro MULTI_LINE_MACRO",
    "sym": "M_dca801c9a44abeec"
  },
  {
    "loc": "00030:0-16",
    "target": 1,
    "kind": "use",
    "pretty": "MULTI_LINE_MACRO",
    "sym": "M_dca801c9a44abeec"
  },
  {
    "loc": "00030:30-46",
    "source": 1,
    "expansions": "static bool\nBool2()\n{\n  return false;\n}",
    "syntax": "use,macro",
    "pretty": "macro MULTI_LINE_MACRO",
    "sym": "M_dca801c9a44abeec"
  },
  {
    "loc": "00030:30-46",
    "target": 1,
    "kind": "use",
    "pretty": "MULTI_LINE_MACRO",
    "sym": "M_dca801c9a44abeec"
  },
  {
    "loc": "00032:0-16",
    "source": 1,
    "expansions": "static bool\nBool3()\n{\n  return false;\n}",
    "syntax": "use,macro",
    "pretty": "macro MULTI_LINE_MACRO",
    "sym": "M_dca801c9a44abeec"
  },
  {
    "loc": "00032:0-16",
    "target": 1,
    "kind": "use",
    "pretty": "MULTI_LINE_MACRO",
    "sym": "M_dca801c9a44abeec"
  }
]
