tests/tests/checks/snapshots/analysis/cpp/macro.cpp/check_glob@NESTED_MACRO_WITH_ARG.snap
---
source: tests/test_check_insta.rs
expression: "&json_results"
---
[
  {
    "loc": "00018:8-29",
    "source": 1,
    "syntax": "def,macro",
    "pretty": "macro NESTED_MACRO_WITH_ARG",
    "sym": "M_354a01c9a44abeec"
  },
  {
    "loc": "00018:8-29",
    "target": 1,
    "kind": "def",
    "pretty": "NESTED_MACRO_WITH_ARG",
    "sym": "M_354a01c9a44abeec"
  },
  {
    "loc": "00025:20-41",
    "source": 1,
    "expansions": "18",
    "syntax": "use,macro",
    "pretty": "macro NESTED_MACRO_WITH_ARG",
    "sym": "M_354a01c9a44abeec"
  },
  {
    "loc": "00025:20-41",
    "target": 1,
    "kind": "use",
    "pretty": "NESTED_MACRO_WITH_ARG",
    "sym": "M_354a01c9a44abeec"
  },
  {
    "loc": "00026:20-41",
    "source": 1,
    "expansions": "15",
    "syntax": "use,macro",
    "pretty": "macro NESTED_MACRO_WITH_ARG",
    "sym": "M_354a01c9a44abeec"
  },
  {
    "loc": "00026:20-41",
    "target": 1,
    "kind": "use",
    "pretty": "NESTED_MACRO_WITH_ARG",
    "sym": "M_354a01c9a44abeec"
  },
  {
    "loc": "00027:20-41",
    "source": 1,
    "expansions": "19",
    "syntax": "use,macro",
    "pretty": "macro NESTED_MACRO_WITH_ARG",
    "sym": "M_354a01c9a44abeec"
  },
  {
    "loc": "00027:20-41",
    "target": 1,
    "kind": "use",
    "pretty": "NESTED_MACRO_WITH_ARG",
    "sym": "M_354a01c9a44abeec"
  }
]
