tests/tests/checks/snapshots/analysis/cpp/macro.cpp/check_glob@TEST_MACRO_INCLUDE.snap
---
source: tests/test_check_insta.rs
expression: "&json_results"
---
[
  {
    "loc": "00050:9-27",
    "target": 1,
    "kind": "use",
    "pretty": "TEST_MACRO_INCLUDE",
    "sym": "M_TEST_MACRO_INCLUDE"
  },
  {
    "loc": "00050:9-27",
    "source": 1,
    "syntax": "macro,use",
    "pretty": "macro TEST_MACRO_INCLUDE",
    "sym": "M_TEST_MACRO_INCLUDE"
  }
]
