tests/tests/checks/snapshots/analysis/cpp/macro.cpp/main@MULTI_LINE_MACRO.snap
---
source: src/bin/test-index.rs
expression: "&json_results"
input_file: inputs/analysis/cpp/macro.cpp/MULTI_LINE_MACRO
---
[
  {
    "loc": "00012:8-24",
    "target": 1,
    "kind": "def",
    "pretty": "MULTI_LINE_MACRO",
    "sym": "M_dca801c9a44abeec"
  },
  {
    "loc": "00033:0-16",
    "target": 1,
    "kind": "use",
    "pretty": "MULTI_LINE_MACRO",
    "sym": "M_dca801c9a44abeec"
  },
  {
    "loc": "00034:0-16",
    "target": 1,
    "kind": "use",
    "pretty": "MULTI_LINE_MACRO",
    "sym": "M_dca801c9a44abeec"
  },
  {
    "loc": "00035:0-16",
    "target": 1,
    "kind": "use",
    "pretty": "MULTI_LINE_MACRO",
    "sym": "M_dca801c9a44abeec"
  },
  {
    "loc": "00037:0-16",
    "target": 1,
    "kind": "use",
    "pretty": "MULTI_LINE_MACRO",
    "sym": "M_dca801c9a44abeec"
  },
  {
    "loc": "00012:8-24",
    "source": 1,
    "syntax": "def,macro",
    "pretty": "macro MULTI_LINE_MACRO",
    "sym": "M_dca801c9a44abeec"
  },
  {
    "loc": "00033:0-16",
    "source": 1,
    "syntax": "macro,use",
    "pretty": "macro MULTI_LINE_MACRO",
    "sym": "M_dca801c9a44abeec",
    "expandsTo": {
      "M_dca801c9a44abeec": {
        "linux64": "static bool\nBool0()\n{\n  return true;\n}",
        "linux64-opt": "static bool\nBool0()\n{\n  return true;\n}",
        "macosx64-aarch64": "static bool\nBool0()\n{\n  return true;\n}",
        "macosx64-aarch64-opt": "static bool\nBool0()\n{\n  return true;\n}",
        "win64": "static bool\nBool0()\n{\n  return true;\n}",
        "win64-opt": "static bool\nBool0()\n{\n  return true;\n}"
      }
    }
  },
  {
    "loc": "00034:0-16",
    "source": 1,
    "syntax": "macro,use",
    "pretty": "macro MULTI_LINE_MACRO",
    "sym": "M_dca801c9a44abeec",
    "expandsTo": {
      "M_dca801c9a44abeec": {
        "linux64": "static bool\nBool1()\n{\n  return true;\n}",
        "linux64-opt": "static bool\nBool1()\n{\n  return true;\n}",
        "macosx64-aarch64": "static bool\nBool1()\n{\n  return true;\n}",
        "macosx64-aarch64-opt": "static bool\nBool1()\n{\n  return true;\n}",
        "win64": "static bool\nBool1()\n{\n  return true;\n}",
        "win64-opt": "static bool\nBool1()\n{\n  return true;\n}"
      }
    }
  },
  {
    "loc": "00035:0-16",
    "source": 1,
    "syntax": "macro,use",
    "pretty": "macro MULTI_LINE_MACRO",
    "sym": "M_dca801c9a44abeec",
    "expandsTo": {
      "M_dca801c9a44abeec": {
        "linux64": "static bool\nBool2()\n{\n  return false;\n}",
        "linux64-opt": "static bool\nBool2()\n{\n  return false;\n}",
        "macosx64-aarch64": "static bool\nBool2()\n{\n  return false;\n}",
        "macosx64-aarch64-opt": "static bool\nBool2()\n{\n  return false;\n}",
        "win64": "static bool\nBool2()\n{\n  return false;\n}",
        "win64-opt": "static bool\nBool2()\n{\n  return false;\n}"
      }
    }
  },
  {
    "loc": "00037:0-16",
    "source": 1,
    "syntax": "macro,use",
    "pretty": "macro MULTI_LINE_MACRO",
    "sym": "M_dca801c9a44abeec",
    "expandsTo": {
      "M_dca801c9a44abeec": {
        "linux64": "static bool\nBool3()\n{\n  return false;\n}",
        "linux64-opt": "static bool\nBool3()\n{\n  return false;\n}",
        "macosx64-aarch64": "static bool\nBool3()\n{\n  return false;\n}",
        "macosx64-aarch64-opt": "static bool\nBool3()\n{\n  return false;\n}",
        "win64": "static bool\nBool3()\n{\n  return false;\n}",
        "win64-opt": "static bool\nBool3()\n{\n  return false;\n}"
      }
    }
  }
]
