tests/tests/checks/snapshots/analysis/cpp/macro.cpp/main@NESTED_MACRO.snap
---
source: src/bin/test-index.rs
expression: "&json_results"
input_file: inputs/analysis/cpp/macro.cpp/NESTED_MACRO
---
[
  {
    "loc": "00014:8-20",
    "target": 1,
    "kind": "def",
    "pretty": "NESTED_MACRO",
    "sym": "M_f43901c9a44abeec"
  },
  {
    "loc": "00024:20-32",
    "target": 1,
    "kind": "use",
    "pretty": "NESTED_MACRO",
    "sym": "M_f43901c9a44abeec"
  },
  {
    "loc": "00014:8-20",
    "source": 1,
    "syntax": "def,macro",
    "pretty": "macro NESTED_MACRO",
    "sym": "M_f43901c9a44abeec"
  },
  {
    "loc": "00024:20-32",
    "source": 1,
    "syntax": "macro,use",
    "pretty": "macro NESTED_MACRO",
    "sym": "M_f43901c9a44abeec",
    "expandsTo": {
      "M_f43901c9a44abeec,M_b42801c9a44abeec": {
        "linux64": "15",
        "linux64-opt": "15",
        "macosx64-aarch64": "15",
        "macosx64-aarch64-opt": "15",
        "win64": "15",
        "win64-opt": "15"
      }
    }
  }
]
