tests/tests/checks/snapshots/analysis/cpp/macro.cpp/main@NESTED_MACRO_WITH_ARG.snap
---
source: src/bin/test-index.rs
expression: "&json_results"
snapshot_kind: text
---
[
  {
    "loc": "00015:8-29",
    "target": 1,
    "kind": "def",
    "pretty": "NESTED_MACRO_WITH_ARG",
    "sym": "M_097901c9a44abeec"
  },
  {
    "loc": "00026:20-41",
    "target": 1,
    "kind": "use",
    "pretty": "NESTED_MACRO_WITH_ARG",
    "sym": "M_097901c9a44abeec"
  },
  {
    "loc": "00028:20-41",
    "target": 1,
    "kind": "use",
    "pretty": "NESTED_MACRO_WITH_ARG",
    "sym": "M_097901c9a44abeec"
  },
  {
    "loc": "00031:4-25",
    "target": 1,
    "kind": "use",
    "pretty": "NESTED_MACRO_WITH_ARG",
    "sym": "M_097901c9a44abeec"
  },
  {
    "loc": "00015:8-29",
    "source": 1,
    "syntax": "def,macro",
    "pretty": "macro NESTED_MACRO_WITH_ARG",
    "sym": "M_097901c9a44abeec"
  },
  {
    "loc": "00026:20-41",
    "source": 1,
    "syntax": "macro,use",
    "pretty": "macro NESTED_MACRO_WITH_ARG",
    "sym": "M_097901c9a44abeec",
    "expandsTo": {
      "M_097901c9a44abeec,M_c86801c9a44abeec": {
        "linux64": "18",
        "macosx64": "18",
        "win64": "18"
      }
    }
  },
  {
    "loc": "00028:20-41",
    "source": 1,
    "syntax": "macro,use",
    "pretty": "macro NESTED_MACRO_WITH_ARG",
    "sym": "M_097901c9a44abeec",
    "expandsTo": {
      "M_097901c9a44abeec,M_b42801c9a44abeec,M_c86801c9a44abeec": {
        "linux64": "15",
        "macosx64": "15",
        "win64": "15"
      }
    }
  },
  {
    "loc": "00031:4-25",
    "source": 1,
    "syntax": "macro,use",
    "pretty": "macro NESTED_MACRO_WITH_ARG",
    "sym": "M_097901c9a44abeec",
    "expandsTo": {
      "M_097901c9a44abeec,M_33c101c9a44abeec,M_c86801c9a44abeec": {
        "linux64": "19",
        "macosx64": "19",
        "win64": "19"
      }
    }
  }
]
