tests/tests/checks/snapshots/analysis/cpp/macro.cpp/main@PER_TARGET_FUNCTION.snap
---
source: src/bin/test-index.rs
expression: "&json_results"
snapshot_kind: text
---
[
  {
    "loc": "00040:10-29",
    "target": 1,
    "kind": "def",
    "pretty": "PER_TARGET_FUNCTION",
    "sym": "M_774175e1e9d206ca"
  },
  {
    "loc": "00066:0-19",
    "target": 1,
    "kind": "use",
    "pretty": "PER_TARGET_FUNCTION",
    "sym": "M_774175e1e9d206ca"
  },
  {
    "loc": "00048:10-29",
    "target": 1,
    "kind": "def",
    "pretty": "PER_TARGET_FUNCTION",
    "sym": "M_f777b5e1e9d206ca"
  },
  {
    "loc": "00066:0-19",
    "target": 1,
    "kind": "use",
    "pretty": "PER_TARGET_FUNCTION",
    "sym": "M_f777b5e1e9d206ca"
  },
  {
    "loc": "00056:10-29",
    "target": 1,
    "kind": "def",
    "pretty": "PER_TARGET_FUNCTION",
    "sym": "M_e377c6e1e9d206ca"
  },
  {
    "loc": "00066:0-19",
    "target": 1,
    "kind": "use",
    "pretty": "PER_TARGET_FUNCTION",
    "sym": "M_e377c6e1e9d206ca"
  },
  {
    "loc": "00040:10-29",
    "source": 1,
    "syntax": "def,macro",
    "pretty": "macro PER_TARGET_FUNCTION",
    "sym": "M_774175e1e9d206ca"
  },
  {
    "loc": "00048:10-29",
    "source": 1,
    "syntax": "def,macro",
    "pretty": "macro PER_TARGET_FUNCTION",
    "sym": "M_f777b5e1e9d206ca"
  },
  {
    "loc": "00056:10-29",
    "source": 1,
    "syntax": "def,macro",
    "pretty": "macro PER_TARGET_FUNCTION",
    "sym": "M_e377c6e1e9d206ca"
  },
  {
    "loc": "00066:0-19",
    "source": 1,
    "syntax": "macro,use",
    "pretty": "macro PER_TARGET_FUNCTION",
    "sym": "M_e377c6e1e9d206ca,M_f777b5e1e9d206ca,M_774175e1e9d206ca",
    "expandsTo": {
      "M_774175e1e9d206ca": {
        "linux64": "bool\nper_target_function()\n{\n  int a;\n  int b;\n  d = 5;\n}\nint f = per_target_function();"
      },
      "M_e377c6e1e9d206ca": {
        "win64": "bool\nper_target_function()\n{\n  int c;\n  d = 3;\n}\nint f = per_target_function();"
      },
      "M_f777b5e1e9d206ca": {
        "macosx64": "bool\nper_target_function()\n{\n  int b;\n  int a;\n  b = 2;\n}\nint f = per_target_function();"
      }
    }
  }
]
