tests/tests/checks/snapshots/analysis/cpp/macro.cpp/main@TEST_MACRO_INCLUDE.snap
---
source: src/bin/test-index.rs
expression: "&json_results"
input_file: inputs/analysis/cpp/macro.cpp/TEST_MACRO_INCLUDE
---
[
  {
    "loc": "00069:9-27",
    "target": 1,
    "kind": "use",
    "pretty": "TEST_MACRO_INCLUDE",
    "sym": "M_TEST_MACRO_INCLUDE"
  },
  {
    "loc": "00069:9-27",
    "source": 1,
    "syntax": "macro,use",
    "pretty": "macro TEST_MACRO_INCLUDE",
    "sym": "M_TEST_MACRO_INCLUDE",
    "expandsTo": {
      "M_TEST_MACRO_INCLUDE": {
        "linux64": "\"nsISupports.h\"",
        "linux64-opt": "\"nsISupports.h\"",
        "macosx64-aarch64": "\"nsISupports.h\"",
        "macosx64-aarch64-opt": "\"nsISupports.h\"",
        "win64": "\"nsISupports.h\"",
        "win64-opt": "\"nsISupports.h\""
      }
    }
  }
]
